@@ -26,9 +26,6 @@ Protocol: SMTP
 
   - Build a shared routine for breaking out the domain name.
 
-  - When verifying senders, check if $DOMAIN(?) is set, and only allow
-    sender addresses from that domain.
-
   - Add RFC 2034/3463 enhanced status codes to all responses.
 
   - Add support for RFC 2487 STARTTLS
