@@ -19,6 +19,9 @@ partial host name (missing at least one "<tt>.</tt>"). (no default)</dd>
 are appended to all sender or recipient addresses that are missing a
 host name. (no default)</dd>
 
+<dt><tt>$SENDER_DOMAINS</tt></dt> <dd>A colon-separated list of domains
+to restrict the sender.</dd>
+
 </dl>
 
 <h2>Sender Action</h2>
